--- a/MSExamTests/MSExamTests.csproj
+++ b/MSExamTests/MSExamTests.csproj
@@ -85,16 +85,19 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SealedClassMocking\SealedClassMocking.csproj">
+    <ProjectReference Include="..\SealedClassMocking\ProgrammingTests.csproj">
       <Project>{7a055cec-ac23-42cd-b867-310c703b520d}</Project>
-      <Name>SealedClassMocking</Name>
+      <Name>ProgrammingTests</Name>
     </ProjectReference>
     <ProjectReference Include="..\WindowsAsyncFormTester\WindowsAsyncFormTester.csproj">
       <Project>{69F40EB1-0EDF-45E3-93F9-DE4F2CC0C959}</Project>
       <Name>WindowsAsyncFormTester</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Chapter3\" />
+    <Folder Include="Chapter4\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
