--- a/MSExamTests/MSExamTests.csproj
+++ b/MSExamTests/MSExamTests.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.Net4.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -45,6 +49,9 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -80,13 +87,21 @@
     <Compile Include="Chapter2\2.2\PointBase.cs" />
     <Compile Include="Chapter2\GenericTypesExample.cs" />
     <Compile Include="Chapter2\MyNullable.cs" />
+    <Compile Include="DataContracterTests.cs" />
+    <Compile Include="IocBenchMarker.cs" />
+    <Compile Include="DictionaryVsListTests.cs" />
     <Compile Include="Linq\OrderBy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\IoCLibs\IoCLibs.csproj">
+      <Project>{4726E1C5-ADB4-4208-B52A-936F35757354}</Project>
+      <Name>IoCLibs</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ProgrammingTests\ProgrammingTests.csproj">
       <Project>{7a055cec-ac23-42cd-b867-310c703b520d}</Project>
       <Name>ProgrammingTests</Name>
